<resources>
    <string name="app_name">Donation App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="toast_button_text">TOAST</string>4

    <string name="count_button_text">COUNT</string>
    <!-- TEXT -->
    <string name="donation_title_text">Welcome Homer</string>
    <string name="donation_subtitle_text">Please Give Generously</string>

    <string name="paypal_method">Paypal</string>
    <string name="direct_method">Direct</string>


    <string name="donation_button_text">DONATE</string>
    <string name="amount_title_text">Amount ($)</string>

    <string name="total_so_far_text">Total So Far</string>
    <string name="total_so_far_value_text">0$</string>

    <string name="amount_donating_placeholder">0 - 999</string>

    <string name="menu_reset">Reset</string>
    <string name="menu_report">Report</string>
    <string name="menu_donation">Donation</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="report_title_text">Report</string>

    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>

    <string name="row_upvotes">Upvotes</string>
    <string name="row_method">Method</string>
    <string name="row_amount">Amount</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>